--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
         <p class="copyright">&copy; 2025 Selfi Salma</p>
     </footer>
 <!-- JavaScript -->
- <script src="js/script.js"></script> 
+<script src="script.js" defer></script>
+
 </body>
 </html>
