--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </div>
 
             <div class="social-media">
-                <a href="#"><img src="img/potp wa.jpeg" alt="Whatsapp"></a>
+                <a href="#"><img src="img/potp wa.jpeg"Whatsapp"></a>
                 <a href="#"><img src="img/poto email.jpeg" alt="Email"></a>
                 <a href="#"><img src="img/poto ig.jpeg" alt="Instagram"></a>
             </div>
